# esports-analytics

./: .gitignore  LICENSE  README.md
data-pipelines/brawl-stars/: .gitignore  Makefile  README.md  main.py  pyproject.toml
terraform/: .gitignore  function.tf  main.tf  network.tf  output.tf  security.tf  storage.tf  variables.tf
web-crawlers/brawl-stars/: .gcloudignore  .gitignore  Makefile  README.md  main.py  pyproject.toml
web-crawlers/brawl-stars/utils/: cloud.py  http.py
