[tool.poetry]
name = "data-pipeline-brawl-stars"
version = "0.0.1"
description = "Data Pipeline - Brawl Stars"
authors = ["Anthony Caliani <avcaliani.it@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.1"
pyspark = "3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
